After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 632354 - SOUP_STATUS_CANT_RESOLVE_PROXY no longer emitted
SOUP_STATUS_CANT_RESOLVE_PROXY no longer emitted
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: API
2.31.x
Other All
: Normal major
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2010-10-17 12:18 UTC by Philip Withnall
Modified: 2010-11-13 22:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Philip Withnall 2010-10-17 12:18:40 UTC
Sometime between 2.30.2 and 2.32.0, libsoup stopped returning SOUP_STATUS_CANT_RESOLVE_PROXY in the case that the proxy URI doesn't resolve (but the URI which is being requested through the proxy should).

e.g. If I set SoupSession::proxy-uri to http://thisshouldalsonotexist.localhost/ and request http://google.com, I get SOUP_STATUS_CANT_RESOLVE instead of SOUP_STATUS_CANT_RESOLVE_PROXY.
Comment 1 Dan Winship 2010-11-13 22:14:26 UTC
fixed in master, will be in 2.32.1