Return SOUP_STATUS_CAN_RESOLVE_PROXY as appropriate

We weren't converting the status codes to their proxy versions when
proxy address resolution failed.

https://bugzilla.gnome.org/show_bug.cgi?id=632354